Fixed images being stretched when not squere.

--- a/16125296_OnlineStore/Content/store.css
+++ b/16125296_OnlineStore/Content/store.css
@@ -220,12 +220,12 @@ td {
 img {
     width: 6em;
     height: 6em;
+    object-fit: contain;
 }
 
 .smallIcon {
     width: 4em;
     height: 4em;
-    padding: 5px;
     margin: 5px;
 }
 
